allow failure to pass

--- a/test.tex
+++ b/test.tex
@@ -1,4 +1,4 @@
-% arara: zoterobib: {collection: /0/QG6TAZSK, exportNotes: yes}
+% arara: zoterobib: {collection: /0/QG6TAZSK, continue: yes}
 % arara: cleanup
 % arara: pdflatex: {synctex: yes, action: nonstopmode, options: "-halt-on-error -file-line-error-style"}
 % arara: biber
