--- a/lib/macaw/i18n/en.yml
+++ b/lib/macaw/i18n/en.yml
@@ -13,7 +13,7 @@ en:
     Progress: print dots for progress
   log:
     WelcomeMessage: Welcome to arara %{0}!
-    ProcessingFile: Processing file ''%{0}'', please wait.
+    ProcessingFile: Processing file ''%{file}'', please wait.
     Done: Done.
     ExceptionRaised: 'Arara raised an exception with the following message:'
     ReadyToRunCommands: Ready to run commands.
@@ -63,7 +63,7 @@ en:
       a proper configuration file is provided.
     InvalidLanguageConfigurationFile: 'Houston, we have a problem. Sadly, the language
       set in the configuration file is not valid. Currently, arara can provide support
-      for the following languages: %{0}. Make sure to choose a valid language or remove
+      for the following languages: %{languages}. Make sure to choose a valid language or remove
       the entry from the configuration file (the field is optional), otherwise arara
       cannot proceed.'
     InvalidFiletypesConfigurationFile: I'm sorry, but it seems your configuration
