--- a/test/test.tex
+++ b/test/test.tex
@@ -1,11 +1,11 @@
 % arara: zoterobib: {collection: /0/QG6TAZSK, continue: yes}
 % arara: cleanup
+% arara: sumatrapdf
 % arara: pdflatex: {synctex: yes, action: nonstopmode, options: "-halt-on-error -file-line-error-style"}
 % arara: biber
 % arara: pdflatex: {synctex: yes, action: batchmode, options: "-halt-on-error -file-line-error-style"}
 % arara: pdflatex: {synctex: yes, action: nonstopmode, options: "-halt-on-error -file-line-error-style"}
 % arara: cleanup
-% rara: sumatrapdf
 % rara: wordcount
 \documentclass[10pt,a4paper,draft]{article}
 
